--- a/Security.Framework/packages.config
+++ b/Security.Framework/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net46" />
-  <package id="Cache.Factory" version="1.0.0.0" targetFramework="net46" />
+  <package id="Cache.Factory" version="1.0.0.0" targetFramework="net46" requireReinstallation="true" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net46" />
   <package id="EnterpriseLibrary.Caching" version="5.0.505.0" targetFramework="net46" />
   <package id="EnterpriseLibrary.Caching.Cryptography" version="5.0.505.0" targetFramework="net46" />
@@ -13,7 +13,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
-  <package id="RestSharp" version="106.1.0" targetFramework="net46" />
+  <package id="RestSharp" version="106.1.0" targetFramework="net46" requireReinstallation="true" />
   <package id="Unity" version="2.1.505.0" targetFramework="net46" />
   <package id="Unity.Interception" version="2.1.505.0" targetFramework="net46" />
 </packages>
