--- a/Security.Framework/packages.config
+++ b/Security.Framework/packages.config
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net46" />
+  <package id="Cache.Factory" version="1.1.0.1" targetFramework="net46" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net46" />
+  <package id="EnterpriseLibrary.Caching" version="5.0.505.0" targetFramework="net46" />
+  <package id="EnterpriseLibrary.Caching.Cryptography" version="5.0.505.0" targetFramework="net46" />
+  <package id="EnterpriseLibrary.Common" version="5.0.505.0" targetFramework="net46" />
+  <package id="EnterpriseLibrary.Security.Cryptography" version="5.0.505.0" targetFramework="net46" />
+  <package id="Microsoft.ApplicationServer.Caching.Client" version="1.0.4657.2" targetFramework="net46" />
   <package id="RestSharp" version="106.1.0" targetFramework="net46" />
+  <package id="Unity" version="2.1.505.0" targetFramework="net46" />
+  <package id="Unity.Interception" version="2.1.505.0" targetFramework="net46" />
 </packages>
