--- a/Security.Framework.Tester/App.config
+++ b/Security.Framework.Tester/App.config
@@ -1,11 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
   <appSettings>
-    <add key="ServerCertificatesPath" value="C:\Seguridad"/>
-    <add key="ServerKeyStrength" value=""/>
+    <add key="ServerCertificatesPath" value="C:\Seguridad" />
+    <add key="ServerKeyStrength" value="3072" />
+    <add key="PublicKeyCertificate" value="5B4729E7357B1C994528190B7C2A98DE525D6FBE.asc" />
     
+
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.0" newVersion="9.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
