--- a/Security.Framework/Security.Framework.csproj
+++ b/Security.Framework/Security.Framework.csproj
@@ -97,6 +97,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
@@ -141,7 +142,9 @@
     <Compile Include="Exception\SecurityException.cs" />
     <Compile Include="Filters\RequireHttpsAttribute.cs" />
     <Compile Include="MessageHandlers\ApiKeyHandler.cs" />
+    <Compile Include="MessageHandlers\BodyEncriptionHandler.cs" />
     <Compile Include="MessageHandlers\HeaderVerificationHandler.cs" />
+    <Compile Include="MessageHandlers\ResponseHeadersHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Messages.Designer.cs">
       <AutoGen>True</AutoGen>
