--- a/Security.Framework/packages.config
+++ b/Security.Framework/packages.config
@@ -8,6 +8,10 @@
   <package id="EnterpriseLibrary.Common" version="5.0.505.0" targetFramework="net46" />
   <package id="EnterpriseLibrary.Security.Cryptography" version="5.0.505.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationServer.Caching.Client" version="1.0.4657.2" targetFramework="net46" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net46" />
+  <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="RestSharp" version="106.1.0" targetFramework="net46" />
   <package id="Unity" version="2.1.505.0" targetFramework="net46" />
   <package id="Unity.Interception" version="2.1.505.0" targetFramework="net46" />
