--- a/Security.Framework/packages.config
+++ b/Security.Framework/packages.config
@@ -2,17 +2,19 @@
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net46" />
   <package id="Cache.Factory" version="1.1.0.1" targetFramework="net46" />
-  <package id="CommonServiceLocator" version="1.0" targetFramework="net46" />
+  <package id="CommonServiceLocator" version="2.0.2" targetFramework="net46" />
   <package id="EnterpriseLibrary.Caching" version="5.0.505.0" targetFramework="net46" />
   <package id="EnterpriseLibrary.Caching.Cryptography" version="5.0.505.0" targetFramework="net46" />
-  <package id="EnterpriseLibrary.Common" version="5.0.505.0" targetFramework="net46" />
+  <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net46" />
   <package id="EnterpriseLibrary.Security.Cryptography" version="5.0.505.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationServer.Caching.Client" version="1.0.4657.2" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net46" />
   <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net46" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
-  <package id="RestSharp" version="106.1.0" targetFramework="net46" />
-  <package id="Unity" version="2.1.505.0" targetFramework="net46" />
-  <package id="Unity.Interception" version="2.1.505.0" targetFramework="net46" />
+  <package id="RestSharp" version="106.2.1" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
+  <package id="Unity" version="5.5.6" targetFramework="net46" />
+  <package id="Unity.Abstractions" version="3.1.3" targetFramework="net46" />
+  <package id="Unity.Interception" version="5.3.1" targetFramework="net46" />
 </packages>
