--- a/Security.Framework/Security.Framework.csproj
+++ b/Security.Framework/Security.Framework.csproj
@@ -173,10 +173,13 @@
     <Compile Include="Exception\MalformedUrlSecurityException.cs" />
     <Compile Include="Exception\SecurityException.cs" />
     <Compile Include="Filters\RequireHttpsAttribute.cs" />
+    <Compile Include="Formatter\PlainTextFormatter.cs" />
     <Compile Include="MessageHandlers\ApiKeyHandler.cs" />
     <Compile Include="MessageHandlers\BodyEncriptionHandler.cs" />
     <Compile Include="MessageHandlers\HeaderVerificationHandler.cs" />
+    <Compile Include="MessageHandlers\RequestBodyHandler.cs" />
     <Compile Include="MessageHandlers\ResponseHeadersHandler.cs" />
+    <Compile Include="MessageHandlers\SignaturesMessageHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Messages.Designer.cs">
       <AutoGen>True</AutoGen>
