--- a/Security.Framework/packages.config
+++ b/Security.Framework/packages.config
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net46" />
-  <package id="Cache.Factory" version="1.1.0.1" targetFramework="net46" />
+  <package id="Cache.Factory" version="1.2.0.0" targetFramework="net46" />
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net46" />
   <package id="EnterpriseLibrary.Caching" version="5.0.505.0" targetFramework="net46" />
   <package id="EnterpriseLibrary.Caching.Cryptography" version="5.0.505.0" targetFramework="net46" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net46" />
   <package id="EnterpriseLibrary.Security.Cryptography" version="5.0.505.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationServer.Caching.Client" version="1.0.4657.2" targetFramework="net46" />
-  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net46" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="RestSharp" version="106.2.1" targetFramework="net46" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
