--- a/Security.Framework/packages.config
+++ b/Security.Framework/packages.config
@@ -1,20 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net46" />
-  <package id="Cache.Factory" version="1.1.0.1" targetFramework="net46" />
+  <package id="Cache.Factory" version="1.2.0.0" targetFramework="net46" />
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net46" />
   <package id="EnterpriseLibrary.Caching" version="5.0.505.0" targetFramework="net46" />
   <package id="EnterpriseLibrary.Caching.Cryptography" version="5.0.505.0" targetFramework="net46" />
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net46" />
   <package id="EnterpriseLibrary.Security.Cryptography" version="5.0.505.0" targetFramework="net46" />
   <package id="Microsoft.ApplicationServer.Caching.Client" version="1.0.4657.2" targetFramework="net46" />
-  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net46" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="RestSharp" version="106.2.1" targetFramework="net46" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
-  <package id="Unity" version="5.5.6" targetFramework="net46" />
-  <package id="Unity.Abstractions" version="3.1.3" targetFramework="net46" />
-  <package id="Unity.Interception" version="5.3.1" targetFramework="net46" />
+  <package id="Unity" version="5.6.0" targetFramework="net46" />
+  <package id="Unity.Abstractions" version="3.2.0" targetFramework="net46" />
+  <package id="Unity.Interception" version="5.4.0" targetFramework="net46" />
 </packages>
