--- a/Security.Framework/packages.config
+++ b/Security.Framework/packages.config
@@ -14,7 +14,7 @@
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net46" />
   <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net46" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net46" />
+  <package id="NuGet.Package.Builder" version="1.0.10" targetFramework="net46" developmentDependency="true" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="RestSharp" version="106.2.1" targetFramework="net46" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
